<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="25sp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorText"
            />
        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img3"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/formbackground"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            >
                <TextView
                    android:id="@+id/formtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/form_title"
                    android:textColor="@color/colorText"
                    android:textSize="22sp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    />
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Name"
                    android:textColorHint="@color/hintText"
                    android:textColor="@color/colorText"
                    android:drawableLeft="@drawable/ic_person"
                    android:drawablePadding="10dp"
                    android:background="@drawable/edit_text_border"
                    android:padding="10dp"
                    android:layout_marginHorizontal="10dp"
                    />

                <EditText
                    android:id="@+id/dob"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Date of Birth"
                    android:textColorHint="@color/hintText"
                    android:textColor="@color/colorText"
                    android:drawableLeft="@drawable/ic_calendar"
                    android:drawablePadding="10dp"
                    android:background="@drawable/edit_text_border"
                    android:padding="10dp"
                    android:layout_marginHorizontal="10dp"
                    />

                <EditText
                    android:id="@+id/address"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Address"
                    android:textColorHint="@color/hintText"
                    android:textColor="@color/colorText"
                    android:drawableLeft="@drawable/ic_location"
                    android:drawablePadding="10dp"
                    android:background="@drawable/edit_text_border"
                    android:padding="10dp"
                    android:layout_marginHorizontal="10dp"
                    />

                <EditText
                    android:id="@+id/nic"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="NIC Number"
                    android:textColorHint="@color/hintText"
                    android:textColor="@color/colorText"
                    android:drawableLeft="@drawable/ic_card"
                    android:drawablePadding="10dp"
                    android:background="@drawable/edit_text_border"
                    android:padding="10dp"
                    android:layout_marginHorizontal="10dp"
                    />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male"
                        android:textColor="@color/colorText"
                        android:layout_marginRight="20dp"
                        android:buttonTint="@color/hintText"
                        />
                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Female"
                        android:textColor="@color/colorText"
                        android:buttonTint="@color/hintText"
                        />
                </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:textSize="18sp"
                android:text="@string/age_label"
                android:layout_marginHorizontal="10dp"
                />

                <Spinner
                    android:id="@+id/age_groups"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp"
                    android:textSize="18sp"
                    android:text="@string/interest_label"
                    android:layout_marginHorizontal="10dp"
                    />
                <CheckBox
                    android:id="@+id/action"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_1"
                    android:textSize="16sp"
                    android:padding="3dp"
                    android:textColor="@color/colorformText"
                    android:buttonTint="@color/colorformText"
                    android:layout_marginHorizontal="10dp"/>

                <CheckBox
                    android:id="@+id/comedy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_2"
                    android:textSize="16sp"
                    android:padding="3dp"
                    android:textColor="@color/colorformText"
                    android:buttonTint="@color/colorformText"
                    android:layout_marginHorizontal="10dp"/>

                <CheckBox
                    android:id="@+id/drama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_3"
                    android:textSize="16sp"
                    android:padding="3dp"
                    android:textColor="@color/colorformText"
                    android:buttonTint="@color/colorformText"
                    android:layout_marginHorizontal="10dp"/>

                <CheckBox
                    android:id="@+id/fantasy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_4"
                    android:textSize="16sp"
                    android:padding="3dp"
                    android:textColor="@color/colorformText"
                    android:buttonTint="@color/colorformText"
                    android:layout_marginHorizontal="10dp"/>

                <CheckBox
                    android:id="@+id/horor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_5"
                    android:textSize="16sp"
                    android:padding="3dp"
                    android:textColor="@color/colorformText"
                    android:buttonTint="@color/colorformText"
                    android:layout_marginHorizontal="10dp"/>

                <CheckBox
                    android:id="@+id/scifi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_6"
                    android:textSize="16sp"
                    android:padding="3dp"
                    android:textColor="@color/colorformText"
                    android:buttonTint="@color/colorformText"
                    android:layout_marginHorizontal="10dp"/>

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/submit_btn"
                    android:textStyle="normal"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textColor="@color/colorText"
                    android:background="@drawable/button_area"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="20dp"
                    />


        </LinearLayout>


    </LinearLayout>

</ScrollView>